Updates for running on heroku

--- a/package.json
+++ b/package.json
@@ -2,9 +2,13 @@
   "name": "smarties-server",
   "version": "1.0.0",
   "description": "",
+  "engines": {
+    "node": ">=7.4.0"
+  },
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node --harmony-async-await api/index.js"
   },
   "author": "",
   "license": "ISC",
