--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "aws-sdk": "^2.7.27",
     "bluebird": "^3.4.7",
     "dynalite": "^1.1.0",
-    "firebase": "^3.6.7",
+    "firebase-admin": "^4.1.0",
     "jsonwebtoken": "^7.2.1",
     "moment": "^2.17.1",
     "restify": "^4.3.0",
