--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ajv": "^4.11.2",
     "aws-sdk": "^2.7.27",
     "bluebird": "^3.4.7",
+    "chalk": "^1.1.3",
     "dynalite": "^1.1.0",
     "firebase-admin": "^4.1.0",
     "jsonwebtoken": "^7.2.1",
