--- a/package.json
+++ b/package.json
@@ -20,13 +20,15 @@
     "eslint": "3.16.1",
     "eslint-config-standard": "6.2.1",
     "eslint-plugin-promise": "3.4.2",
-    "eslint-plugin-standard": "2.0.1"
+    "eslint-plugin-standard": "2.0.1",
+    "fs-extra": "2.0.0"
   },
   "dependencies": {
     "ajv": "4.11.3",
     "aws-sdk": "2.22.0",
     "bluebird": "3.4.7",
     "jsonwebtoken": "7.3.0",
+    "lodash": "4.17.4",
     "moment": "2.17.1",
     "restify": "4.3.0",
     "stripe": "4.15.0"
