--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "lodash": "4.17.4",
     "moment": "2.17.1",
     "restify": "4.3.0",
-    "stripe": "4.15.0"
+    "stripe": "4.15.0",
+    "uuid": "3.0.1"
   }
 }
