--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "url": "https://github.com/datagovsg/smarties-server/issues"
   },
   "homepage": "https://github.com/datagovsg/smarties-server",
+  "engine": {
+    "node": "7.7.1",
+    "npm": "4.1.2"
+  },
   "devDependencies": {
     "eslint": "3.16.1",
     "eslint-config-standard": "6.2.1",
@@ -32,6 +36,7 @@
     "moment": "2.17.1",
     "restify": "4.3.0",
     "stripe": "4.15.0",
-    "uuid": "3.0.1"
+    "uuid": "3.0.1",
+    "winston": "2.3.1"
   }
 }
